<resources>
    <string name="app_name">Bruin Food</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hall">Hall</string>
    <string name="swipes">Swipes</string>
    <string name="hours">Hours</string>
    <string name="date">Date</string>
    <string name="you_should_have">You should have</string>
    <string name="swipes_left">swipes left at the end of the day</string>
    <string name="breakfast_hours"><b>Breakfast:</b> %1$s</string>
    <string name="lunch_hours"><b>Lunch:</b> %1$s</string>
    <string name="dinner_hours"><b>Dinner:</b> %1$s</string>
    <string name="late_night_hours"><b>Late Night:</b> %1$s</string>
    <string name="title_activity_settings">Settings</string>

    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="serving_size">Serving Size</string>
    <string name="amount_per_serving">Amount per serving</string>
    <string name="calories">Calories</string>
    <string name="fat_calories">Fat Cal</string>
    <string name="percent_daily_value">% Daily Value*</string>
    <string name="total_fat">Total Fat</string>
    <string name="saturated_fat">\t\tSat. Fat</string>
    <string name="trans_fat">\t\tTrans Fat</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sodium">Sodium</string>
    <string name="total_carbohydrates">Total Carbs</string>
    <string name="dietary_fiber">\t\tFiber</string>
    <string name="sugars">\t\tSugars</string>
    <string name="protein">Protein</string>
    <string name="vitamin_a">Vit A</string>
    <string name="vitamin_c">Vit C</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="ingredients">Ingredients</string>
</resources>
