<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="16dp">


            <TextView
                android:id="@+id/hallName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1"
                tools:text="Covel" />

            <TextView
                android:id="@+id/breakfastHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/breakfast_hours"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hallName" />

            <TextView
                android:id="@+id/lunchHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lunch_hours"
                app:layout_constraintTop_toBottomOf="@+id/breakfastHours"
                tools:layout_editor_absoluteX="24dp" />

            <TextView
                android:id="@+id/dinnerHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dinner_hours"
                app:layout_constraintTop_toBottomOf="@+id/lunchHours"
                tools:layout_editor_absoluteX="24dp" />

            <TextView
                android:id="@+id/lateNightHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/late_night_hours"
                app:layout_constraintTop_toBottomOf="@+id/dinnerHours"
                tools:layout_editor_absoluteX="24dp" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</layout>
