<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="nutrition"
            type="com.vanshgandhi.bruinfood.Models.Nutrition" />
    </data>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nutrition_facts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/nutrition_margin"
        android:layout_marginRight="@dimen/nutrition_margin"
        tools:showIn="@layout/food_detail">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:gravity="center_horizontal"
            android:text="@string/nutrition_facts"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving_size" />

            <TextView
                android:id="@+id/serving_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{nutrition.servingSize}" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_per_serving"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{nutrition.calories}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_calories" />

            <TextView
                android:id="@+id/fat_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.fatCalories}" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/percent_daily_value"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_fat"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.totalFatGrams}"/>

            <TextView
                android:id="@+id/total_fat_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.totalFatPercent}" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturated_fat" />

            <TextView
                android:id="@+id/saturated_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.saturatedFatGrams}" />

            <TextView
                android:id="@+id/saturated_fat_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.saturatedFatPercent}" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_fat" />

            <TextView
                android:id="@+id/trans_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.transFatPercent}" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cholesterol"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cholesterol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.cholesterolGrams}" />

            <TextView
                android:id="@+id/cholesterol_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.cholesterolPercent}" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sodium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sodium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.sodiumGrams}"/>

            <TextView
                android:id="@+id/sodium_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.sodiumPercent}" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_carbohydrates"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_carbohydrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.totalCarbohydratesGrams}" />

            <TextView
                android:id="@+id/total_carbohydrate_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.totalCarbohydratesPercent}" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dietary_fiber" />

            <TextView
                android:id="@+id/dietary_fiber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.fiberGrams}" />

            <TextView
                android:id="@+id/dietary_fiber_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.fiberPercent}" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sugars" />

            <TextView
                android:id="@+id/sugars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.sugarsGrams}"/>

            <TextView
                android:id="@+id/sugars_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end" />
            <!--TODO: sugarsPercent?? -->
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@{nutrition.proteinGrams}" />

            <TextView
                android:id="@+id/protein_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end" />
            <!--TODO: protein percent?? -->
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />


        <TableRow android:weightSum="2">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vitamin_a" />

                <TextView
                    android:id="@+id/vitamin_a_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{nutrition.vitaminAPercent}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vitamin_c" />

                <TextView
                    android:id="@+id/vitamin_c_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{nutrition.vitaminCPercent}" />
            </LinearLayout>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

        <TableRow android:weightSum="2">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calcium" />

                <TextView
                    android:id="@+id/calcium_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{nutrition.calciumPercent}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iron" />

                <TextView
                    android:id="@+id/iron_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@{nutrition.ironPercent}" />
            </LinearLayout>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/nutrition_table_border_padding_topbot"
            android:layout_marginTop="@dimen/nutrition_table_border_padding_topbot"
            android:background="@android:color/black" />

    </TableLayout>
</layout>